<resources>
    <string name="app_name">SmartMap</string>
    <string name="action_add">添加</string>


    <string name="hint_username"> 请输入用户名</string>
    <string name="hint_projectname"> 请输入项目名称</string>
    <string name="hint_miaoshu"> 描述</string>
    <string name="hint_pass"> 请输入密码</string>
    <string name="hint_passagin"> 请再次输入用户名密码</string>
    <string name="login_btn">登录</string>
    <string name="login_ok">确定</string>
    <string name="login_qiandao">详情</string>
    <string name="login_quxiao">取消</string>
    <string name="Registered_btn"> 若无帐号，请注册</string>
    <string name="selectgroup">请选择小组</string>

    <string name="login">若有帐号，请直接登录</string>
    <string name="Registered">注册</string>
    <string name="shopnum">店铺编号:</string>
    <string name="shopname">店铺名称:</string>
    <string name="shopaddr">店铺地址:</string>
    <string name="shopimg">添加图片:</string>
    <string name="beizhu">添加备注:</string>
    <string name="kehuname">客户姓名:</string>
    <string name="zhouqi">补货周期:</string>
    <string name="kehuphone">客户电话:</string>
    <string name="getaddr">获取</string>
    <string name="kehuleixing">客户vip</string>
    <string name="zengsong">是否赠送</string>
    <string name="xiangxidizhi">详细地址:</string>
    <string name="search">搜索</string>
    <string name="searchhint">请输入店铺编号或者手机号</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Copyright © 2018 - 2019 SmartMap</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dingdanhao">订单号:</string>
    <string name="shangpinname">商品名称</string>


</resources>
