<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/shopnum"
                    />

                <EditText
                    android:id="@+id/et_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:inputType="numberSigned"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"

                    android:text="@string/shopname"
                    />

                <EditText
                    android:id="@+id/et_shpomane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                   />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_kehu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/kehuname"
                    />

                <EditText
                    android:id="@+id/et_kehu"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/kehuphone"
                    />

                <EditText
                    android:id="@+id/et_kehuphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="phone"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_dizhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/shopaddr"
                     />

                <EditText
                    android:id="@+id/et_dizhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                   />

                <Button
                    android:id="@+id/btn_getaddr"
                    style="@style/btn_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="4dp"
                    android:onClick="getadd"
                    android:text="@string/getaddr"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_buhuozhouqi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/zhouqi"
                    />

                <EditText
                    android:id="@+id/et_zhouqi"
                    android:layout_width="wrap_content"
                    android:layout_height="49dp"
                    android:layout_marginStart="8dp"
                    android:text="30"
                    android:ems="10"
                    android:inputType="numberSigned"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="72dp"
                    android:text="@string/shopimg"

                    />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="20dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/addimages" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_beizhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/beizhu"
                    />

                <EditText
                    android:id="@+id/et_beizhu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:maxLines="3" />
            </LinearLayout>
            <Button
                android:id="@+id/btn_add"
                style="@style/btn_style"
                android:layout_width="245dp"
                android:layout_height="51dp"
               android:layout_gravity="center_horizontal"
                android:text="@string/login_ok"
                android:onClick="tosave"
                android:textSize="20sp"
                android:layout_margin="10dp"
               />

        </LinearLayout>

</ScrollView>
